--- a/flatbuffers/BUILD.bazel
+++ b/flatbuffers/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
-load("//mylang/private:resolved_toolchain.bzl", "resolved_toolchain")
+load("//flatbuffers/private:resolved_toolchain.bzl", "resolved_toolchain")
 
 # For stardoc to reference the files
 exports_files(["defs.bzl"])
@@ -25,8 +25,8 @@ bzl_library(
     srcs = ["repositories.bzl"],
     visibility = ["//visibility:public"],
     deps = [
-        "//mylang/private:toolchains_repo",
-        "//mylang/private:versions",
+        "//flatbuffers/private:toolchains_repo",
+        "//flatbuffers/private:versions",
         "@bazel_tools//tools/build_defs/repo:http.bzl",
         "@bazel_tools//tools/build_defs/repo:utils.bzl",
     ],
@@ -49,4 +49,13 @@ bzl_library(
     name = "toolchain",
     srcs = ["toolchain.bzl"],
     visibility = ["//visibility:public"],
+)
+
+sh_binary(
+    name = "flatc",
+    srcs = ["flatc.sh"],
+    data = [":resolved_toolchain"],
+    env = {
+        "FLATC_BINARY": "$(location :resolved_toolchain)",
+    },
 )
