--- a/flatbuffers/BUILD.bazel
+++ b/flatbuffers/BUILD.bazel
@@ -58,4 +58,5 @@ sh_binary(
     env = {
         "FLATC_BINARY": "$(location :resolved_toolchain)",
     },
+    visibility = ["//visibility:public"],
 )
