example: build e2e test
Now we can build the e2e test

--- a/e2e/smoke/BUILD
+++ b/e2e/smoke/BUILD
@@ -36,4 +36,7 @@ flatbuffer_library_public(
 java_library(
     name = "monster_java",
     srcs = [":monster_fbs_java"],
+    deps = [
+        "@flatbuffers-java//jar",
+    ],
 )
