bazel: tests work as expected
Now things work as expected and we can generate the required java
libraries

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -20,6 +20,6 @@ buildifier(
 
 buildifier_test(
     name = "buildifier.test",
-    srcs = ["BUILD"],
+    srcs = ["BUILD.bazel"],
     lint_mode = "warn",
 )
