ci: fix Windows
Now Windows hosts should work as expected as well

--- a/e2e/smoke/BUILD.bazel
+++ b/e2e/smoke/BUILD.bazel
@@ -35,6 +35,10 @@ flatbuffer_library_public(
         "MyGame/Sample/WeaponT.java",
     ],
     language_flag = "--java",
+    # If you're going to build in Windows hosts then you need to have this
+    # defined, otherwise the output directory includes a bunch of non
+    # expected files
+    out_prefix = "flatbuffer-output",
 )
 
 java_library(
